--- a/app/assets/stylesheets/_tables.scss.erb
+++ b/app/assets/stylesheets/_tables.scss.erb
@@ -68,3 +68,11 @@
     }
 
 }
+.table-container#container-hitos {
+    margin-top: 0px;
+    h1 {
+        margin-top: 5px;
+        margin-bottom: -1px;
+        padding: 15px;
+    }
+}
