--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -134,6 +134,9 @@ ul#mentors {
         }
 
         &.plus {
+            padding-top: 5px;
+            padding-left: 5px;
+            text: center;
             background-color: white;
             width: 30px;
             height: 30px;
@@ -354,14 +357,14 @@ ul#milestone-list {
 
         @include transition(0.3s ease-in-out);
 
-        &:hover {
+        /*&:hover {
             margin-top: 20px;
             margin-bottom: 20px;
             padding-top: 30px;
             padding-bottom: 30px;
             @include box-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
 
-        }
+        }*/
 
         &:before {
             content: '';
