--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -357,14 +357,14 @@ ul#milestone-list {
 
         @include transition(0.3s ease-in-out);
 
-        /*&:hover {
-            margin-top: 20px;
+        &:hover {
+            /*margin-top: 20px;
             margin-bottom: 20px;
             padding-top: 30px;
-            padding-bottom: 30px;
-            @include box-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
+            padding-bottom: 30px;*/
+            @include box-shadow(4px 4px 12px rgba(0, 0, 0, 0.6));
 
-        }*/
+        }
 
         &:before {
             content: '';
