--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -57,10 +57,20 @@
 }
 
 .timeline-filter{
-    a {
-        line-height: 25px;
 
-        background-color: $peterriver-focus;
+    height: 30px;
+    border-radius: 15px;
+    padding: 0 10px;
+    float: left;
+    background-color: #dddddd;
+    margin: 4px;
+
+    &:hover {
+        background-color: #e4e4e4;
+    }
+
+    a {
+
         text-decoration: none;
         padding: 6px;
         border-bottom: solid 0px transparent;
@@ -68,11 +78,7 @@
         display: block;
         margin-bottom: 30px;
 
-        color: white;
-
-        &:hover {
-            background-color: $peterriver;
-        }
+        color: #2a2a2a;
     }
 }
 
@@ -580,4 +586,3 @@ ul#pending-list {
 
     }
 }
-
