--- a/app/views/templates/_generate.html.erb
+++ b/app/views/templates/_generate.html.erb
@@ -1,5 +1,5 @@
 
-  <form action='<%=templates_generate_path%>' class='timeline-form main-form slide-on-click clearfix toggle-disabled' data-toggle='validator'>
+  <form action='<%=templates_generate_path%>' id='from-template-form' class='timeline-form main-form slide-on-click clearfix toggle-disabled' data-toggle='validator'>
 
     <h1 class=""><span class="glyphicon glyphicon-check"></span> <%= t('templates.generate.header') %></h1>
 
