--- a/app/views/milestones/_form.html.erb
+++ b/app/views/milestones/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for [@person, @person.milestones.build], html: { class:'timeline-form main-form slide-on-click clearfix toggle-disabled','data-toggle': 'validator'}  do |m| %>
+<%= form_for [@person, @person.milestones.build], html: { id: 'new-milestone-form', class:'timeline-form main-form slide-on-click clearfix toggle-disabled','data-toggle': 'validator'}  do |m| %>
     <h1 class=""><span class="glyphicon glyphicon-check"></span> <%= t('milestones.new.header') %></h1>
     <div class="form-slide">
         <%= render partial: 'milestones/innerform', locals: { m: m, in_profile: true} %>
