--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -60,9 +60,9 @@
           <th id="categories"><%= t('milestones.category') %></th>
           <th id="people"><%= t('milestones.people') %></th>
           <th id="tags"><%= t('milestones.tags') %></th>
-          <th id="start_date"><%= t('milestones.start_date') %></th>
-          <th id="due_date"><%= t('milestones.due_date') %></th>
-          <th id="mod_date"><%= t('milestones.mod_date') %></th>
+          <th id="start_date" style="width: 100px" ><%= t('milestones.start_date') %></th>
+          <th id="due_date" style="width: 100px"><%= t('milestones.due_date') %></th>
+          <th id="mod_date" style="width: 100px"><%= t('milestones.mod_date') %></th>
           <th><%= t('milestones.actions') %></th>
         </tr>
         </thead>
