--- a/app/assets/javascripts/milestonefilters.js.erb
+++ b/app/assets/javascripts/milestonefilters.js.erb
@@ -4,8 +4,9 @@ var milestonefilters_ready = function() {
             function( oSettings, aData, iDataIndex ) {
                 var iDueFrom= document.getElementById('due_date_from').value;
                 var iDueTo = document.getElementById('due_date_to').value;
-                var iDueDateCol = 7; //7 es la de due_date
+                var iDueDateCol = $('.datatable#hitos th#due_date').index(); //7 es la de due_date
                 var iEndDateCol = 7;
+                //console.log ('indice due_date:' + $('.datatable#hitos th#due_date').index());
 
                 // toma dd*mm*yyyy y convierte a yyyymmdd
                 iDueFrom=iDueFrom.substring(6,10) + iDueFrom.substring(3,5)+ iDueFrom.substring(0,2);
@@ -17,7 +18,7 @@ var milestonefilters_ready = function() {
 //                    var datoffin=aData[iEndDateCol].substring(0,4) + aData[iEndDateCol].substring(5,7)+ aData[iEndDateCol].substring(8,10);
 
                 //si es en una sola columna se puede eliminar uno de los datofXXX
-                console.log (datofdue);
+//                console.log (datofdue);
                 if ( iDueFrom === "" && iDueTo === "" )
                 {
                     return true;
