alfred 54 funcionando sin test

--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -141,7 +141,18 @@ ul#mentors {
 
         &.plus {
             padding-top: 5px;
-            padding-left: 5px;
+            padding-left: 4px;
+            text: center;
+            background-color: white;
+            width: 30px;
+            height: 30px;
+            a {
+                color: $turqoise;
+            }
+        }
+        &.minus {
+            padding-top: 6px;
+            padding-left: 2px;
             text: center;
             background-color: white;
             width: 30px;
