Arreglos frontend en show de People

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -189,6 +189,12 @@
             obj.hide();
         });
 
+
+        $(".timeline-filter").unbind().click(function() {
+            $(".timeline-filter").removeClass("active");
+            $(this).addClass("active");
+        });
+
         var ctrlDown = false;
         const ctrlKey = 17;
         const qKey = 81;
